--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-react-rcs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Grunt task for compiling RCS styles into CSS.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +23,8 @@
     "promise-object": "~0.1.2",
     "bluebird": "~2.2.1",
     "cubby": "~0.0.3",
-    "glob": "~4.0.4"
+    "glob": "~4.0.4",
+    "whenplus": "~1.7.1-g"
   },
   "readme": "ERROR: No README data found!"
 }
