--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-react-rcs",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Grunt task for compiling RCS styles into CSS.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +26,8 @@
     "glob": "~4.0.4",
     "whenplus": "~1.7.1-g"
   },
-  "readme": "ERROR: No README data found!"
+  "bugs": {
+    "url": "https://github.com/icodeforlove/grunt-react-rcs/issues"
+  },
+  "homepage": "https://github.com/icodeforlove/grunt-react-rcs"
 }
